Fixed css link (styles.css > style.css) and My Profile button width

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/pageable@latest/dist/pageable.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paw Pals</title>
 </head>
 <body>
