centered slogan and profile button with flexbox container, and added button responsiveness

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                 <button type="button" id="myProfileBtn"> 
                     MY PROFILE
                 </button>
-
-                <!-- button to create profile -->
-                <button type="button" id="createProfileBtn"> 
-                    CREATE A PROFILE
-                </button>
-                <!-- slogan section-->
-                <div id="slogan">
-                    <p>THERE GOES THE NEIGHBORHOOD</p>
-                </div> 
+                <!-- container to center these items -->
+                <div class="slogan-button-flexbox">
+                    <!-- slogan section-->
+                    <div id="slogan">
+                        <p>THERE GOES THE NEIGHBORHOOD</p>
+                    </div>
+                    <!-- button to create profile -->
+                    <button type="button" id="createProfileBtn"> 
+                        CREATE A PROFILE
+                    </button>
+                </div>
             </div>
             
         </div>
