captured and console log users data

--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
             <div id="create-4" class="modal">
                 <p>What is your age?</p>
                 <div>
-                    <input type="text" id="age" />
+                    <input type="text" id="user-age" />
                 </div>
                 <button type="submit" id="create4Btn">Next</button>
             </div>
             <div id="create-5" class="modal">
                 <p>Are you interested in cats or dogs?</p>
                 <div>
-                    <input type= "radio" id="cats" name="interest-choice" />
+                    <input type= "radio" id="cats" name="interest-choice" value="cats"/>
                     <label for="cat">Cat</label>
-                    <input type= "radio" id="dogs" name="interest-choice" />
+                    <input type= "radio" id="dogs" name="interest-choice" value="dogs"/>
                     <label for="dog">Dog</label>
-                    <input type= "radio" id="both" name="interest-choice" />
+                    <input type= "radio" id="both" name="interest-choice" value="both"/>
                     <label for="both">Both</label>
                 </div>
                 <button type="submit" id="create5Btn">Finish</button>
