--- a/swipe.html
+++ b/swipe.html
@@ -48,6 +48,12 @@
             .name {
                 position: absolute;
                 bottom: 0;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 30px;
+                font-weight: bold;
+                color: palevioletred;
+                margin-left: 12px;
+                text-shadow: 2px 1px papayawhip;
             }
         </style>
     </head>
