add css style for name and age

--- a/swipe.html
+++ b/swipe.html
@@ -45,15 +45,35 @@
                 background-color: white;
             }
 
+            .name-age {
+                position:absolute;
+                margin-left: 10px;
+                bottom: 10px;
+                display: flex;
+                flex-direction: row;
+                align-items: baseline;
+            }
+
             .name {
-                position: absolute;
+                /* position: absolute; */
                 bottom: 0;
                 font-family: Arial, Helvetica, sans-serif;
-                font-size: 30px;
+                font-size: 40px;
                 font-weight: bold;
                 color: palevioletred;
-                margin-left: 12px;
                 text-shadow: 2px 1px papayawhip;
+                margin-block-start: 0;
+                margin-block-end: 0;
+                display: flex;
+            }
+            .age {
+                /* position: absolute; */
+                margin-left: 10px;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 25px;
+                font-weight: bold;
+                color: White;
+                text-shadow: 2px 1px palevioletred;
             }
         </style>
     </head>
