add random bios

--- a/swipe.html
+++ b/swipe.html
@@ -55,7 +55,6 @@
             }
 
             .name {
-                /* position: absolute; */
                 bottom: 0;
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 40px;
@@ -67,13 +66,18 @@
                 display: flex;
             }
             .age {
-                /* position: absolute; */
                 margin-left: 10px;
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 25px;
                 font-weight: bold;
                 color: White;
                 text-shadow: 2px 1px palevioletred;
+            }
+            .bio {
+                position: absolute;
+                margin-top: 70px;
+                font-size: 20px;
+                font-family: Arial, Helvetica, sans-serif;
             }
         </style>
     </head>
