--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div id="create-4" class="modal">
                 <p>What is your age?</p>
                 <div>
-                    <input type="text" id="user-age" />
+                    <input type="number" id="user-age" />
                 </div>
                 <button type="submit" id="create4Btn">Next</button>
             </div>
@@ -79,9 +79,9 @@
                 <p>Are you interested in cats or dogs?</p>
                 <div>
                     <input type= "radio" id="cats" name="interest-choice" value="cats"/>
-                    <label for="cat">Cat</label>
+                    <label for="cats">Cats</label>
                     <input type= "radio" id="dogs" name="interest-choice" value="dogs"/>
-                    <label for="dog">Dog</label>
+                    <label for="dogs">Dogs</label>
                     <input type= "radio" id="both" name="interest-choice" value="both"/>
                     <label for="both">Both</label>
                 </div>
