--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paw Pals</title>
+    <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw"/>
 </head>
 <body>
 
