--- a/swipe.html
+++ b/swipe.html
@@ -18,6 +18,9 @@
                 position: relative;
                 overflow: hidden;
                 background-color: rgb(245, 247, 250);
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .card {
@@ -78,12 +81,24 @@
                 font-size: 20px;
                 font-family: Arial, Helvetica, sans-serif;
             }
+            .alert {
+                height: 320px;
+                display: flex;
+                margin-bottom: 250px;
+                font-size: 72px;
+                color: pink;
+            }
         </style>
     </head>
 
     <body>
         <div id="board"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+        <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous">
+        </script>
         <script src="./assets/js/swipe.js"></script>
     </body>
 
