added imageSelection function and restructured api functions

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
             <div id="create-2" class="modal">
                 <p>Select a profile picture</p>
+                <div class="image-selection"></div>
                 <button type="submit" id="create2Btn">Next</button>
             </div>
             <div id="create-3" class="modal">
