added profile page html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paw Pals</title>
-    <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw"/>
+    <link rel="shortcut icon" type="image/png" href="./assets/images/pawPink.png"/>
 </head>
 <body>
 
@@ -89,6 +89,34 @@
                 <button type="submit" id="create5Btn">Finish</button>
             </div>
         </div>
+
+        <!-- MY PROFILES PAGE-->
+        <div id="my-profiles-page" class="hide">
+
+            <div id="my-profiles-container">
+                <h1>My Profiles</h1>
+                    
+                <ul id="profiles-list">
+                    <!-- <li></li> --> <!-- picture/name/age -->
+                </ul>
+            </div>
+
+            <div id="analytics-container">
+                <h1>Analytics</h1>
+
+                <ul id="analytics-list">
+                    <li class="age">Average age: <span class="age-number"></span></li>
+                    <li class="match">Number of match: <span class="match-number"></span></li>
+                </ul>
+            </div>
+
+            <div id="end-buttons">
+                <button type="button" id="btn-create-profile-two" onclick="">Create a profile</button>
+                <button type="button" id="btn-swipe" onclick="">Start swiping</button> 
+            </div>
+
+        </div>
+
         <!-- pips will go here -->
     </div>
     <script
