--- a/swipe.html
+++ b/swipe.html
@@ -76,9 +76,10 @@
                 text-shadow: 2px 1px palevioletred;
             }
             .bio {
-                position: absolute;
+                position: fixed;
+                width: 90%;
                 margin-top: 70px;
-                font-size: 20px;
+                font-size: 13px;
                 font-family: Arial, Helvetica, sans-serif;
             }
             .alert {
