formatting edits to html

--- a/swipe.html
+++ b/swipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Build a Full Featured Tinder Like Carousel in Vanilla JavaScript</title>
