--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
             </div>
             <div id="create-2" class="modal">
                 <p>Select a profile picture</p>
-                <div class="image-selection"></div>
+                <div class="img-select">
+                    <div class="img-choice" id="img-choice-1"></div>
+                    <!-- <div class="img-choice" id="img-choice-2"></div>
+                    <div class="img-choice" id="img-choice-3"></div>
+                    <div class="img-choice" id="img-choice-4"></div>
+                    <div class="img-choice" id="img-choice-5"></div> -->
+                </div>
                 <button type="submit" id="create2Btn">Next</button>
             </div>
             <div id="create-3" class="modal">
