added img selection buttons and initial userAnimalCheck function

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                     <div class="img-choice" id="img-choice-4"></div>
                     <div class="img-choice" id="img-choice-5"></div> -->
                 </div>
-                <button type="submit" id="create2Btn">Next</button>
+                <p>Select this picture?</p>
+                <button type="submit" id="create2Btn">Yes</button>
+                <button type="button" id="new-img">Nah, new picture</button>
+                <!-- <button type="submit" id="create2Btn">Next</button> -->
             </div>
             <div id="create-3" class="modal">
                 <p>What is your name?</p>
