revised logic and styling to display fixed sized images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="create-2" class="modal">
                 <p>Select a profile picture</p>
                 <div class="img-select">
-                    <div class="img-choice" id="img-choice-1"></div>
+                    <div class="img-choice"></div>
                     <!-- <div class="img-choice" id="img-choice-2"></div>
                     <div class="img-choice" id="img-choice-3"></div>
                     <div class="img-choice" id="img-choice-4"></div>
