added and styled user age selection input

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             <div id="create-4" class="modal">
                 <p>What is your age?</p>
                 <div>
-                    <input type="number" id="user-age" />
+                    <!-- <input type="number" id="user-age" /> -->
+                    <select name="user-age" id="user-age">
+                        <option value="" disabled selected>Select your age</option>
+                    </select>
                 </div>
                 <button type="submit" id="create4Btn">Next</button>
             </div>
