--- a/swipe.html
+++ b/swipe.html
@@ -20,8 +20,8 @@
                 overflow: hidden;
                 background-color: rgb(245, 247, 250);
                 display: flex;
-                align-items: center;
-                justify-content: center;
+                align-items:center;
+                justify-content:flex-end;
             }
 
             .card {
@@ -85,10 +85,12 @@
             }
             .alert {
                 height: 320px;
+                width: 320px;
                 display: flex;
                 margin-bottom: 250px;
                 font-size: 72px;
                 color: pink;
+                background-size: cover;
             }
         </style>
     </head>
