added hamburger css, html, js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     MY PROFILE
                 </button> -->
 
-                <!-- hamburger example -->
+                <!-- hamburger dropdown -->
                 <div class="menu">
                     <div class="hamburger-menu-wrapper">
                       <button class="hamburger-menu">
