--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/pageable@latest/dist/pageable.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.2/jquery.modal.min.css" integrity="sha512-T3VL1q6jMUIzGLRB9z86oJg9PgF7A55eC2XkB93zyWSqQw3Ju+6IEJZYBfT7E9wOHM7HCMCOZSpcssxnUn6AeQ==" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"
+    />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.2/jquery.modal.min.css"
+        integrity="sha512-T3VL1q6jMUIzGLRB9z86oJg9PgF7A55eC2XkB93zyWSqQw3Ju+6IEJZYBfT7E9wOHM7HCMCOZSpcssxnUn6AeQ=="
+        crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paw Pals</title>
-    <link rel="shortcut icon" type="image/png" href="./assets/images/pawPink.png"/>
+    <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
 </head>
 <body>
 
@@ -24,12 +32,12 @@
                 </div>
 
                 <!-- button to Login -->
-                <!-- <button type="button" id="myProfileBtn"> 
+                <button type="button" id="loginBtn"> 
                     MY PROFILE
-                </button> -->
+                </button>
 
                 <!-- hamburger dropdown -->
-                <div class="menu">
+                <!-- <div class="menu">
                     <div class="hamburger-menu-wrapper">
                       <button class="hamburger-menu">
                         <span>toggle menu</span>
@@ -42,7 +50,7 @@
                       <a href="#" id="ml-contact">CONTACT US</a><br>
                     </div>
                   </div>
-                  <div class="menu-overlay"></div>
+                  <div class="menu-overlay"></div> -->
                 
 
                 <!-- container to center these items -->
@@ -115,7 +123,7 @@
         </div>
 
         <!-- MY PROFILES PAGE-->
-        <div id="my-profile-page" class="">
+        <!-- <div id="my-profile-page" class="">
 
             <div class="columns features">
 
@@ -142,10 +150,7 @@
                                 </div>
                             </div>
                     
-                            <!-- <div class="content">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Phasellus nec iaculis mauris.
-                            </div> -->
+
                         </div>
 
                     </div>
@@ -175,7 +180,7 @@
                 <button type="button" id="btn-swipe" onclick="">Start swiping</button> 
             </div>
 
-        </div>
+        </div> -->
 
         <!-- pips will go here -->
     </div>
