--- a/swipe.html
+++ b/swipe.html
@@ -3,9 +3,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+        <link href="https://unpkg.com/pageable@latest/dist/pageable.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"/>
+        <link rel="stylesheet" href="./assets/css/hamburger.css">
+        <link rel="stylesheet" href="./assets/css/swipe.css">
+        <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
         <title>Build a Full Featured Tinder Like Carousel in Vanilla JavaScript</title>
         <style>
-            html,
+            /* html,
             body {
                 width: 100%;
                 height: 100%;
@@ -17,14 +24,14 @@
                 width: 100%;
                 height: 100%;
                 position: relative;
-                overflow: hidden;
-                background-color: rgb(245, 247, 250);
-                display: flex;
+                overflow: hidden; */
+                /* background-color: rgb(245, 247, 250); */
+                /* display: flex;
                 align-items:center;
                 justify-content:flex-end;
             }
 
-            .card {
+            .cardC {
                 width: 320px;
                 height: 320px;
                 position: absolute;
@@ -91,18 +98,103 @@
                 font-size: 72px;
                 color: pink;
                 background-size: cover;
-            }
+            } */
         </style>
     </head>
 
     <body>
-        <div id="board"></div>
+        <div class="pg-wrapper">
+            <div id="container" class="pg-container">
+                <!-- pages -->
+                <div data-anchor="page-1" id="page-1" class="pg-page pg-active">
+                    <!-- hamburger dropdown -->
+                    <div class="menu">
+                        <div class="hamburger-menu-wrapper">
+                        <button class="hamburger-menu">
+                            <span>toggle menu</span>
+                        </button>
+                        </div>
+                        <div class="menu-list">
+                        <a href="#" id="ml-about">ABOUT</a><br>
+                        <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
+                        <a href="#" id="ml-matches">MATCHES</a><br>
+                        <a href="#" id="ml-contact">CONTACT US</a><br>
+                        </div>
+                    </div>
+                    <div class="menu-overlay"></div>
+                    <div id="board"></div>
+                    <!-- MY PROFILES PAGE-->
+                </div>
+                <!-- <div id="my-profile-page" class="bulma">
+
+                    <div class="columns features">
+
+                        <div class="column is-3"></div>
+
+                        <div class="column is-3">
+
+                            <div id="my-profile-container" class="card shadow-box">
+
+                                <div class="card-image">
+                                    <figure class="image is-4by3">
+                                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" class="modal-button">
+                                    </figure>
+                                </div>
+
+                                <div class="card-content">
+                                    <p class="title is-4">Animal Name</p>
+                                    <div class="media">
+                                        <div class="media-content">
+                                            <p class="subtitle is-6">Age</p>
+                                            <div class="buttons is-centered">
+                                                <span class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                            
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="column is-3">
+
+                            <div id="analytics-container" class="card shadow-box">
+                                
+                                <div id="analytics-list" class="card-content">
+                                    <h1 class="title is-4"> Analytics</h1>
+                                    <div class="content">
+                                        <p class="subtitle is-6 age">Average age: <span class="age-number"></span></p>
+                                        <p class="subtitle is-6 match">Number of match: <span class="match-number"></span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="column is-3"></div>
+
+                    </div>
+
+                    <div id="end-buttons">
+                        <button type="button" id="btn-create-profile-two" onclick="">Create a profile</button>
+                        <button type="button" id="btn-swipe" onclick="">Start swiping</button> 
+                    </div>
+
+                </div> -->
+            </div>
+        </div>
+
+        <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
         <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous">
         </script>
+        <script src="https://unpkg.com/pageable@latest/dist/pageable.min.js"></script>
+        <script src="./assets/js/hamburger.js"></script>
         <script src="./assets/js/swipe.js"></script>
     </body>
 
