added alert modal, and modalNum variable for alert logic

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 </div>
                 <button type="submit" id="create5Btn">Finish</button>
             </div>
+            <div id="modal-alert" class="modal">
+                
+            </div>
         </div>
     </div>
   
