--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         integrity="sha512-T3VL1q6jMUIzGLRB9z86oJg9PgF7A55eC2XkB93zyWSqQw3Ju+6IEJZYBfT7E9wOHM7HCMCOZSpcssxnUn6AeQ=="
         crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paw Pals</title>
     <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
@@ -103,7 +102,8 @@
                 <button type="submit" id="create5Btn">Finish</button>
             </div>
             <div id="modal-alert" class="modal">
-                
+                <p id="alert-text"></p>
+                <button type="submit" id="alert-btn">Okay</button>
             </div>
         </div>
     </div>
