--- a/swipe.html
+++ b/swipe.html
@@ -3,106 +3,50 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+        <link href="https://unpkg.com/pageable@latest/dist/pageable.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"/>
+        <link rel="stylesheet" href="./assets/css/hamburger.css">
+        <link rel="stylesheet" href="./assets/css/swipe.css">
+        <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
         <title>Build a Full Featured Tinder Like Carousel in Vanilla JavaScript</title>
-        <style>
-            html,
-            body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-
-            #board {
-                width: 100%;
-                height: 100%;
-                position: relative;
-                overflow: hidden;
-                background-color: rgb(245, 247, 250);
-                display: flex;
-                align-items:center;
-                justify-content:flex-end;
-            }
-
-            .card {
-                width: 320px;
-                height: 320px;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                border-radius: 0%;
-                background-color: white;
-                border-top: 10px solid white;
-                border-right: 10px solid white;
-                border-left: 10px solid white;
-                border-bottom: 80px solid white;
-                transform: translateX(-50%) translateY(-50%) scale(0.95);
-                background-size: cover;
-                background-position: center;
-            }
-
-            .card-frame {
-                width: 400px;
-                height: 500px;
-                border-radius: 2%;
-                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-                background-color: white;
-            }
-
-            .name-age {
-                position:absolute;
-                margin-left: 10px;
-                bottom: 10px;
-                display: flex;
-                flex-direction: row;
-                align-items: baseline;
-            }
-            .name {
-                bottom: 0;
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 40px;
-                font-weight: bold;
-                color: palevioletred;
-                text-shadow: 2px 1px papayawhip;
-                margin-block-start: 0;
-                margin-block-end: 0;
-                display: flex;
-            }
-            .age {
-                margin-left: 10px;
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 25px;
-                font-weight: bold;
-                color: White;
-                text-shadow: 2px 1px palevioletred;
-            }
-            .bio {
-                position: fixed;
-                width: 90%;
-                margin-top: 70px;
-                font-size: 13px;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            .alert {
-                height: 320px;
-                width: 320px;
-                display: flex;
-                margin-bottom: 250px;
-                font-size: 72px;
-                color: pink;
-                background-size: cover;
-            }
-        </style>
     </head>
 
     <body>
-        <div id="board"></div>
+        <div class="pg-wrapper">
+            <div id="container" class="pg-container">
+                <!-- pages -->
+                <div data-anchor="page-1" id="page-1" class="pg-page pg-active">
+                    <!-- hamburger dropdown -->
+                    <div class="menu">
+                        <div class="hamburger-menu-wrapper">
+                        <button class="hamburger-menu">
+                            <span>toggle menu</span>
+                        </button>
+                        </div>
+                        <div class="menu-list">
+                        <a href="#" id="ml-about">ABOUT</a><br>
+                        <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
+                        <a href="#" id="ml-matches">MATCHES</a><br>
+                        <a href="#" id="ml-contact">CONTACT US</a><br>
+                        </div>
+                    </div>
+                    <div class="menu-overlay"></div>
+                    <div id="board"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
         <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous">
         </script>
+        <script src="https://unpkg.com/pageable@latest/dist/pageable.min.js"></script>
+        <script src="./assets/js/hamburger.js"></script>
         <script src="./assets/js/swipe.js"></script>
     </body>
 
