added min-max age selection, and select and option styling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <!-- button to Login -->
                 <button type="button" id="loginBtn"> 
-                    MY PROFILE
+                    LOGIN
                 </button>
                 
                 <!-- container to center these items -->
@@ -98,6 +98,16 @@
                     <label for="dogs">Dogs</label>
                     <input type= "radio" id="both" name="interest-choice" value="both"/>
                     <label for="both">Both</label>
+                </div>
+                <div id="min-max-age">
+                    <p>Between:</p>
+                    <select name="match-min-age" id="match-min-age">
+                        <option value="" disabled selected>Min</option>
+                    </select>
+                    <p> and </p>
+                    <select name="match-max-age" id="match-max-age">
+                        <option value="" disabled selected>Max</option>
+                    </select>
                 </div>
                 <button type="submit" id="create5Btn">Finish</button>
             </div>
