--- a/my-profile.html
+++ b/my-profile.html
@@ -26,10 +26,10 @@
     </button>
     </div>
     <div class="menu-list">
-    <a href="#" id="ml-about">ABOUT</a><br>
+    <a href="about.html" id="ml-about">ABOUT</a><br>
     <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
-    <a href="#" id="ml-matches">MATCHES</a><br>
-    <a href="#" id="ml-contact">CONTACT US</a><br>
+    <a href="matches.html" id="ml-matches">MATCHES</a><br>
+    <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
     </div>
   </div>
   <div class="menu-overlay"></div>
@@ -45,22 +45,25 @@
 
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" class="modal-button">
+              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" id="animal-image" class="modal-button">
             </figure>
           </div>
 
           <header class="card-header">
-              <p class="title is-4 card-header-title  is-centered">Animal Name</p>
+              <p id="animal-name" class="title is-4 card-header-title is-centered">Animal Name</p>
           </header>
 
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="subtitle is-6">Age</p>
-                <p class="subtitle is-6">Type of animal</p>
-                <p class="subtitle is-6">Interest/Orientation</p>
+                <p id="animal-age" class="subtitle is-6">Age</p>
+                <p id="animal-type" class="subtitle is-6">Type of animal</p>
+                <p id="animal-interest" class="subtitle is-6">Interest</p>
+                <p id="min-max" class="subtitle is-6">Min-Max</p>
+                <p id="min-max" class="subtitle is-6">*click on the fields to modify them</p>
               <div class="buttons is-centered">
-                <span class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span>
+                <span id="edit-btn" class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span>
+                <span id="delete-btn" class="button is-link modal-button is-warning" data-target="modal-image2">Delete</span>
               </div>
               </div>
             </div>
@@ -75,13 +78,13 @@
               
               <div id="analytics-list">
                 <header class="card-header">
-                  <h1 class="title is-4 card-header-title  is-centered"> Analytics</h1>
+                  <h1 class="title is-4 card-header-title is-centered"> Analytics</h1>
                 </header>
 
                   <div class="card-content">
                       <p class="subtitle is-6 age">Average age of swipe right: <span class="age-number"></span></p>
                       <p class="subtitle is-6 match">Number of matches: <span class="match-number"></span></p>
-                      <p class="subtitle is-6 match">Species that matches the most with that profile: <span class="match-number"></span></p>
+                      <p class="subtitle is-6 match">Species which matches the most with that profile: <span class="match-number"></span></p>
                   </div>
               </div>
           </div>
@@ -97,13 +100,14 @@
 
       <div class="column is-4 mt-6">
         <div id="end-buttons" class="buttons is-centered">
-          <button id="btn-swipe" class="button is-link is-warning">Start swiping</button>
+          <!-- <button id="btn-swipe" class="button is-link is-warning">Start swiping</button> -->
+          <a id="btn-swipe" href="swipe.html" class="button is-link is-warning">Start swiping</a>
         </div>
       </div>
 
       <div class="column is-4"></div>
 
-    </div>
+  </div>
 
 </div>
 <script
