edit card style and css

--- a/swipe.html
+++ b/swipe.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./assets/css/hamburger.css">
         <link rel="stylesheet" href="./assets/css/swipe.css">
         <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
-        <title>Build a Full Featured Tinder Like Carousel in Vanilla JavaScript</title>
+        <title>Pawpals/Swipe</title>
     </head>
 
     <body>
