trying to restore develop

--- a/my-profile.html
+++ b/my-profile.html
@@ -26,17 +26,10 @@
     </button>
     </div>
     <div class="menu-list">
-<<<<<<< HEAD
     <a href="about.html" id="ml-about">ABOUT</a><br>
     <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
     <a href="matches.html" id="ml-matches">MATCHES</a><br>
     <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
-=======
-    <a href="#" id="ml-about">ABOUT</a><br>
-    <a href="#" id="ml-profile">MY PROFILE</a><br>
-    <a href="#" id="ml-matches">MATCHES</a><br>
-    <a href="#" id="ml-contact">CONTACT US</a><br>
->>>>>>> 192c5bf4f4e718d4816a0fd2acac13da03196e97
     </div>
   </div>
   <div class="menu-overlay"></div>
@@ -52,7 +45,6 @@
 
           <div class="card-image">
             <figure class="image is-4by3">
-<<<<<<< HEAD
               <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" id="animal-image" class="modal-button">
             </figure>
           </div>
@@ -68,25 +60,11 @@
                 <p id="animal-type" class="subtitle is-6">Type of animal</p>
                 <p id="animal-interest" class="subtitle is-6">Interest</p>
                 <p id="min-max" class="subtitle is-6">Min-Max</p>
-                <p id="min-max" class="subtitle is-6">*click on the fields to modify them</p>
+                <p id="min-max" class="subtitle is-6">*click on the fields to edit them</p>
               <div class="buttons is-centered">
-                <span id="edit-btn" class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span>
+                <!-- <span id="edit-btn" class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span> -->
                 <span id="delete-btn" class="button is-link modal-button is-warning" data-target="modal-image2">Delete</span>
               </div>
-=======
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" class="modal-button">
-            </figure>
-          </div>
-
-          <div class="card-content">
-            <p class="title is-4">Animal Name</p>
-            <div class="media">
-              <div class="media-content">
-                <p class="subtitle is-6">Age</p>
-                <div class="buttons is-centered">
-                  <span class="button is-link modal-button is-warning" data-target="modal-image2">Edit</span>
-                </div>
->>>>>>> 192c5bf4f4e718d4816a0fd2acac13da03196e97
               </div>
             </div>
           </div>
@@ -98,23 +76,15 @@
 
           <div id="analytics-container" class="card shadow-box">
               
-<<<<<<< HEAD
               <div id="analytics-list">
                 <header class="card-header">
-                  <h1 class="title is-4 card-header-title is-centered"> Analytics</h1>
+                  <h1 id="analytics" class="title is-4 card-header-title is-centered"> Analytics</h1>
                 </header>
 
                   <div class="card-content">
                       <p class="subtitle is-6 age">Average age of swipe right: <span class="age-number"></span></p>
                       <p class="subtitle is-6 match">Number of matches: <span class="match-number"></span></p>
                       <p class="subtitle is-6 match">Species which matches the most with that profile: <span class="match-number"></span></p>
-=======
-              <div id="analytics-list" class="card-content">
-                  <h1 class="title is-4"> Analytics</h1>
-                  <div class="content">
-                      <p class="subtitle is-6 age">Average age: <span class="age-number"></span></p>
-                      <p class="subtitle is-6 match">Number of match: <span class="match-number"></span></p>
->>>>>>> 192c5bf4f4e718d4816a0fd2acac13da03196e97
                   </div>
               </div>
           </div>
@@ -122,7 +92,6 @@
 
       <div class="column is-3"></div>
 
-<<<<<<< HEAD
     </div>
 
     <div class="columns features">
@@ -132,19 +101,12 @@
       <div class="column is-4 mt-6">
         <div id="end-buttons" class="buttons is-centered">
           <!-- <button id="btn-swipe" class="button is-link is-warning">Start swiping</button> -->
-          <a id="btn-swipe" href="swipe.html" class="button is-link is-warning">Start swiping</a>
+          <!-- <a id="btn-swipe" href="swipe.html" class="button is-link is-warning">Start swiping</a> -->
         </div>
       </div>
 
       <div class="column is-4"></div>
 
-=======
-  </div>
-
-  <div id="end-buttons">
-      <button type="button" id="btn-create-profile-two" onclick="">Create a profile</button>
-      <button type="button" id="btn-swipe" onclick="">Start swiping</button> 
->>>>>>> 192c5bf4f4e718d4816a0fd2acac13da03196e97
   </div>
 
 </div>
