fixed input alignment on contact html

--- a/contact-us.html
+++ b/contact-us.html
@@ -51,7 +51,7 @@
   
   <div class="field">
     <label class="label">Username</label>
-    <div class="control has-icons-left has-icons-right">
+    <div class="control  has-icons-right"> 
       <input class="input is-rounded" type="text" placeholder="@YourUsername">
       <span class="icon is-small is-left">
         <i class="fas fa-user"></i>
@@ -65,7 +65,7 @@
   
   <div class="field">
     <label class="label">Email</label>
-    <div class="control has-icons-left has-icons-right">
+    <div class="control has-icons-right">
       <input class="input is-rounded" type="email" placeholder="Email input" value="hello@">
       <span class="icon is-small is-left">
         <i class="fas fa-envelope"></i>
