--- a/swipe.html
+++ b/swipe.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"/>
         <link rel="stylesheet" href="./assets/css/hamburger.css">
         <link rel="stylesheet" href="./assets/css/swipe.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
         <title>Pawpals/Swipe</title>
     </head>
