--- a/my-profile.html
+++ b/my-profile.html
@@ -126,7 +126,15 @@
       </div>
     </article>
 
-    
+    <article id="success-edit-container" class="message is-success hide">
+      <div class="message-header">
+        <p>Successful!</p>
+        <button id="edit-cross-message" class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        Your profile information have been <strong>updated successfully</strong>.
+      </div>
+    </article>
 
   </div>
 <script
