--- a/my-profile.html
+++ b/my-profile.html
@@ -101,7 +101,7 @@
         <p>Attention!</p>
         <button id="delete-cross-message" class="delete" aria-label="delete"></button>
       </div>
-      <div class="message-body">
+      <div class="message-body btns-delete">
         <p>Are you sure you want to <strong>delete</strong> your profile information?</p>
         <p class="control">
           <button id="delete-btn-message" class="button is-danger">
