--- a/my-profile.html
+++ b/my-profile.html
@@ -46,7 +46,7 @@
 
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="animal profile picture" id="animal-image" class="modal-button">
+              <img src="" alt="your profile picture" id="animal-image">
             </figure>
           </div>
 
