added match js logic and changed menu list on swipe html

--- a/matches.html
+++ b/matches.html
@@ -37,7 +37,14 @@
                         </div>
                     </div>
                     <div class="menu-overlay"></div>
-                    
+                    <div id="board"></div>
+
+                    <!-- <div class="columns features">
+                        <div id="column-one" class="column is-3"></div>
+                        <div id="column-two" class="column is-3"></div>
+                        <div id="column-three" class="column is-3"></div>
+                        <div id="column-four" class="column is-3"></div>
+                    </div> -->
                 </div>
             </div>
         </div>
