--- a/swipe.html
+++ b/swipe.html
@@ -26,10 +26,10 @@
                         </button>
                         </div>
                         <div class="menu-list">
-                        <a href="#" id="ml-about">ABOUT</a><br>
+                        <a href="about.html" id="ml-about">ABOUT</a><br>
                         <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
-                        <a href="#" id="ml-matches">MATCHES</a><br>
-                        <a href="#" id="ml-contact">CONTACT US</a><br>
+                        <a href="matches.html" id="ml-matches">MATCHES</a><br>
+                        <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
                         </div>
                     </div>
                     <div class="menu-overlay"></div>
