--- a/my-profile.html
+++ b/my-profile.html
@@ -37,9 +37,9 @@
 
     <div class="columns features">
 
-      <div class="column is-3"></div>
+      <div id="column-one" class="column is-3"></div>
 
-      <div class="column is-3">
+      <div id="column-two" class="column is-3">
 
         <div id="my-profile-container" class="card shadow-box">
 
@@ -74,7 +74,7 @@
 
       </div>
 
-      <div class="column is-3">
+      <div id="column-three" class="column is-3">
 
           <div id="analytics-container" class="card shadow-box">
               
@@ -92,7 +92,7 @@
           </div>
       </div>
 
-      <div class="column is-3"></div>
+      <div id="column-four" class="column is-3"></div>
 
     </div>
 
