--- a/my-profile.html
+++ b/my-profile.html
@@ -59,9 +59,38 @@
               <div class="media-content">
                 <p id="animal-age" class="subtitle is-6">Age: <span id="animal-age-text"></span></p>
                 <p id="animal-type" class="subtitle is-6">Type of animal: <span id="animal-type-text"></span></p>
+
+                <div id ="type-secret-container" class="control hide">
+                  <label class="radio">
+                    <input id="isdogs" type="radio" class="click" name="answer">
+                    <span id="isdoggos"> Dog</span>
+                  </label>
+                  <label class="radio">
+                    <input id="iscats" type="radio" class="click" name="answer">
+                    <span  id="iscatsCats"> Cat</span>
+                  </label>
+                </div>
+
                 <p id="animal-interest" class="subtitle is-6">Interest: <span id="animal-interest-text"></span></p>
+                
+                <div id ="interest-secret-container" class="control hide">
+                  <label class="radio">
+                    <input id="dogs" type="radio" class="click" name="answer">
+                    <span id="doggos"> Dogs</span>
+                  </label>
+                  <label class="radio">
+                    <input id="cats" type="radio" class="click" name="answer">
+                    <span  id="catsCats"> Cats</span>
+                  </label>
+                  <label class="radio">
+                    <input id="both" type="radio" class="click" name="answer">
+                    <span  id="catsDogs"> Both</span>
+                  </label>
+                </div>
+
                 <p id="min" class="subtitle is-6">Min age: <span id="animal-min-text"></span></p>
                 <p id="max" class="subtitle is-6">Max age: <span id="animal-max-text"></span></p>
+
               <div class="buttons is-centered">
                 <span id="edit-btn" class="button is-link modal-button is-warning" data-target="modal-image2" onclick="doEdit()">Edit</span>
                 <span id="save-btn" class="button is-link modal-button is-success hide" data-target="modal-image2" onclick="saveEdit()">Save</span>
@@ -83,8 +112,8 @@
                   <h1 id="analytics" class="title is-4 card-header-title is-centered"> Analytics</h1>
                 </header>
 
-                  <div class="card-content">
-                      <p class="subtitle is-6 age">Average age of swipe right: <span class="age-number"></span></p>
+                  <div class="card-content is-align-items-center">
+                      <p class="subtitle is-6 age is-align-items-center">Average age of swipe right: <span class="age-number"></span></p>
                       <p class="subtitle is-6 match">Number of matches: <span class="match-number"></span></p>
                       <p class="subtitle is-6 match">Species which matches the most with that profile: <span class="species-number"></span></p>
                   </div>
