fixed touch responsiveness of buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <!-- button to Login -->
-                <button type="button" id="loginBtn"> 
+                <button type="button" id="loginBtn" ontouchend="loginProfileCheck()"> 
                     LOGIN
                 </button>
                 <!-- container to center these items -->
@@ -33,7 +33,7 @@
                         <p>THERE GOES THE NEIGHBORHOOD</p>
                     </div>
                     <!-- button to create profile -->
-                    <button type="button" id="createProfileBtn"> 
+                    <button type="button" id="createProfileBtn" ontouchstart="createClick()"> 
                         CREATE A PROFILE
                     </button>
                 </div>
