made select image modal mobile responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p>THERE GOES THE NEIGHBORHOOD</p>
                     </div>
                     <!-- button to create profile -->
-                    <button type="button" id="createProfileBtn" ontouchstart="createClick()"> 
+                    <button type="button" id="createProfileBtn" ontouchend="createClick()"> 
                         CREATE A PROFILE
                     </button>
                 </div>
@@ -54,10 +54,6 @@
                 <p>Select a profile picture</p>
                 <div class="img-select">
                     <div class="img-choice"></div>
-                    <!-- <div class="img-choice" id="img-choice-2"></div>
-                    <div class="img-choice" id="img-choice-3"></div>
-                    <div class="img-choice" id="img-choice-4"></div>
-                    <div class="img-choice" id="img-choice-5"></div> -->
                 </div>
                 <p>Select this picture?</p>
                 <button type="submit" id="create2Btn">Yes</button>
