add media queries

--- a/about.html
+++ b/about.html
@@ -36,16 +36,14 @@
 
       <div class="content is-large">
         <h1>About Us</h1>
-        <p>Well, there isn't much to say. We love pets, and much like us two-legged freaks, they too need companionship so we created <strong>PawPals</strong></p>
-        <p>Can you imagine a world where all you have to look at are these four walls, and your owner's stupid face?</p>
-        <p>Depending on when you're reading this you know what we're talking about...now just imagine how hard it sucks for your little friends</p>
-        <p>Yup! It's a <strong>Cat</strong>astrophe so don't even...</p>
-        <p>That's it...That's the speech</p>
+        <p>Well, there isn't much to say. We love pets, and much like us two-legged freaks, they too need companionship so we created <strong>PawPals</strong>.
+        Can you imagine a world where all you have to look at are these four walls, and your owner's stupid face? Depending on when you're reading this you know what we're talking about...now just imagine how hard it sucks for your little friends. Yup! It's a <strong>Cat</strong>astrophe so don't even... 
+        That's it...That's the speech
         <h2>Meet The Team</h2>
         <p>Who let the dogs out? Us, the developups! Feel free to send us a meowssage to say hi! We don't bite. Well actually, Noemi might. Don't make her angry. You will be sorry.</p>
       </div>
 
-      <div class="team-profiles">
+      <div class="team-profiles is-large">
           <div class="member">
               <img src = "https://via.placeholder.com/300/09f/fff.png">
               <span class = "member-name">NINJA</span>
