added logo, and fixed hamburger menu margins

--- a/swipe.html
+++ b/swipe.html
@@ -20,6 +20,9 @@
                 <!-- pages -->
                 <div data-anchor="page-1" id="page-1" class="pg-page pg-active">
                     <!-- hamburger dropdown -->
+                    <div>
+                        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+                    </div>
                     <div class="menu">
                         <div class="hamburger-menu-wrapper">
                         <button class="hamburger-menu">
