added logo to profile page

--- a/my-profile.html
+++ b/my-profile.html
@@ -19,6 +19,13 @@
   <title>My Profile</title>
 </head>
 <body>
+
+<header>
+  <div>
+    <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+  </div>
+</header>
+
   <div class="menu">
     <div class="hamburger-menu-wrapper">
     <button class="hamburger-menu">
